tests/pos/i324.scala
class O
object O {
   val x: this.type = O.this
}
object O2 {
   val x: this.type = O2.this
}
