tests/neg/i324.scala
class O
object O {
   val x: this.type = OO.this
   val y: O = OO.this
}
